Add handler for get availible for chaos docker containers
