# docs/swagger.json
@@ -4,6 +4,38 @@
         "contact": {}
     },
     "paths": {
+        "/api/v1/containers": {
+            "get": {
+                "description": "Возвращает список запущенных Docker-контейнеров доступных для chaos-тестирования",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chaos"
+                ],
+                "summary": "Список контейнеров",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/chaos.ContainerInfo"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/runs": {
             "get": {
                 "description": "Возвращает все запуски со сценариями и статусами (дашборд)",
@@ -655,6 +687,23 @@
         }
     },
     "definitions": {
+        "chaos.ContainerInfo": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "models.ChaosParams": {
             "type": "object",
             "properties": {
@@ -806,7 +855,7 @@
             "type": "object",
             "properties": {
                 "chaos_events": {
-                    "description": "Хаос-инжиниринг (будет добавлено позже).",
+                    "description": "Хаос-инжиниринг.",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.ChaosParams"
